--- a/KnightTour/changelog.txt
+++ b/KnightTour/changelog.txt
@@ -3,3 +3,4 @@ DD/MM/YY (2018)
 9/7 :  overhaul, change basics to only array int[] for better handling of the possitions
 	finish minor supporting methods
 11/7: done possible moves
+12/7: can now run till out of moves but RANDOMLY and only ONCE
